fixed overflow issue on checkbox

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -1501,10 +1501,14 @@ button.back
   margin-right: 10px
   white-space: nowrap
   position: relative
+    
   &.status-cell
     width: 20px
     overflow: visible
     margin-top: 3px
+
+    .td-content
+      overflow: visible
     .status
       margin-top: 7px
       display: block
